finished test.todos and some more tests for the change-code endpoint and the test todos with the verify code endpoint

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
+    "timeout": 20000,
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
     "clearMocks": true
