added first test and more test scripts in package.json and enabled some extra headers on helmet config and added hpp and enabled it globally

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "resetdb": "cd prisma && ts-node delete.ts",
     "test:all": "jest --verbose --runInBand --watchAll --detectOpenHandles",
-    "test:customer": "jest customer.test.ts --verbose --runInBand --watchAll --detectOpenHandles",
+    "test:customer:all": "jest 0-customer-module --verbose --runInBand --watchAll --detectOpenHandles ",
+    "test:customer:new-customer": "jest create-new-customer.test.ts --verbose --runInBand --watchAll --detectOpenHandles",
+    "test:customer:draft-message": "jest draft-message-to-customer.test.ts --verbose --runInBand --watchAll --detectOpenHandles",
     "test:auth": "jest authentication.test.ts --verbose --runInBand --watchAll --detectOpenHandles"
   },
   "dependencies": {
@@ -27,9 +29,9 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "cors": "^2.8.5",
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.13",
     "reflect-metadata": "^0.2.0",
@@ -42,6 +44,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
+    "@types/hpp": "^0.2.6",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
