last test that was finished was successfully attaching files and recieving the content, now i need to write the code that correctly parses all of the attachments and sanitizes them and validates them. look into crc32 magic numbers, implement parsing technique from blog module in node-space backend repo or find something more updated. need to then finish with configuring the email sending service, verify nodemailer is the best option

--- a/package.json
+++ b/package.json
@@ -74,6 +74,10 @@
       "json",
       "ts"
     ],
+    "transformIgnorePatterns": [
+      "/node_modules/",
+      "\\.(docx)$"
+    ],
     "verbose": true,
     "rootDir": "src",
     "testRegex": ".*\\.test\\.ts$",
