testing automated testing

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "resetdb": "cd prisma && ts-node delete.ts",
-    "test:all": "jest --verbose --runInBand --detectOpenHandles",
+    "test:all": "jest --verbose --runInBand --forceExit",
     "test:customer:all": "jest 0-customer-module --verbose --runInBand --watchAll --detectOpenHandles ",
     "test:customer:new-customer": "jest create-new-customer.test.ts --verbose --runInBand --watchAll --detectOpenHandles",
     "test:customer:draft-message": "jest draft-message-to-customer.test.ts --watchAll --verbose --runInBand --detectOpenHandles",
