--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "jpeg-js": "^0.4.4",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.13",
+    "pngjs": "^7.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -51,6 +53,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.14",
+    "@types/pngjs": "^6.0.5",
     "@types/readline-sync": "^1.4.8",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
