--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:customer:all": "jest 0-customer-module --verbose --runInBand --watchAll --detectOpenHandles ",
     "test:customer:new-customer": "jest create-new-customer.test.ts --verbose --runInBand --watchAll --detectOpenHandles",
     "test:customer:draft-message": "jest draft-message-to-customer.test.ts --watchAll --verbose --runInBand --detectOpenHandles",
+    "test:customer:view-messages": "jest get-customer-messages.test.ts --verbose --watchAll --runInBand --detectOpenHandles",
     "test:auth": "jest authentication.test.ts --verbose --runInBand --watchAll --detectOpenHandles"
   },
   "dependencies": {
