--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "resetdb": "cd prisma/prisma-scripts && ts-node delete.ts",
     "soft-reset": "cd src/0-customer-module/__tests__/db-test-scripts && npx ts-node db-test-script.ts",
+    "delete:todo": "cd prisma/prisma-scripts && npx ts-node delete-todos.ts",
     "test:all": "jest --verbose --runInBand --forceExit",
     "test:customer:all": "jest 0-customer-module --verbose --runInBand --watchAll --detectOpenHandles ",
     "test:customer:new-customer": "jest create-new-customer.test.ts --verbose --runInBand --watchAll --detectOpenHandles",
